--- a/UC Mom.html
+++ b/UC Mom.html
@@ -2,20 +2,31 @@
 <!doctype html>
 	<head>
 		<title>Lactation Room Reservation</title>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 	</head>
-<body style="color:#4d96b8;font-family:Orator Std">
-    <table>
-		<tbody>
-		<tr>
-			<td align="center">Home</td>
-			<td align="justify">Map</td>
-			<td><a href = "http://women.ucsd.edu/">Contact</a></td><!--link to women center-->
-			<td><font color=efa4c9>Login</color></td>
-		</tr>
-		</tbody>
-	 </table>
+	<body style="color:#4d96b8;font-family:Orator Std">
+		<table align="center">
+			<tbody>
+			 <tr>
+			 <td>Home</td>
+			 <td>Map</td>
+			 <td><a href = "http://women.ucsd.edu/">Contact</a></td><!--link to women center-->
+			 <td>Login</color></td>
+		        </tr>
+			</tbody>
+	        </table>
 	 <hr width="80%";size="3" />
 	 <p align="center";style="font-size:50px">WELCOME!PLEASE SIGN IN TO ENTER SITE</p>
-	<h1 align = "center"><b><i>UC Mom</i></b></h1>
+	<h1 align = "center"><b><i>UC Mom</i></b></h1><br>
+	<div>
+		<h3>EMAIL</h3>
+		<div class="user">
+			<!--empty block to enter user email-->
+		</div>
+		<h3>5 DIGIT CODE</h3>
+		<div class="user">
+		 	<!--empty block to enter password-->
+		</div>
+	</div>
 </body>
 </html>
