--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
 		<title>Uc Mom</title>
 	</head>
 	<body>
-		<table align="center">
+		<table id="linkheadertable">
 			<thead></thead>
 			<tbody>
 			<tr>
@@ -18,23 +18,39 @@
 			</tr>
 			</tbody>
 		</table>
-	
+
 	<hr width="80%";size="3" />
 	<p align="center">UCMOM <span>San Diego</span></p>
 	<!--create 11 blocks to put images in-->
-	<div class="picture" id="firstrow"></div>
-	<div class="picture" id="firstrow"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	<div class="picture"></div>
-	
-	
-	
+	<table id="geisel1">
+	<tr>
+		<td><div class="picture"></div></td>
+		<td><div class="picture"></div></td>
+	</tr>
+	</table>
+	<table id="geisel2">
+	<tr>
+		<td><div class="picture"></div></td>
+		<td><div class="picture"></div></td>
+		<td><div class="picture"></div></td>
+	</tr>
+	</table>
+	<table id="geisel3">
+	<tr>
+		<td><div class="picture"></div></td>
+		<td><div class="picture"></div></td>
+		<td><div class="picture"></div></td>
+		<td><div class="picture"></div></td>
+	</tr>
+	</table>
+	<table id="geisel4">
+	<tr>
+		<td><div class="picture"></div></td>
+		<td><div class="picture"></div></td>
+	</tr>
+	</table>
+
+
+
 	</body>
 </html>
