Update and rename Home.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content=	 "text/html; charset=gb2312" />
+		<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
-		<title>Uc Mom</title>
+		<title>UC Mom</title>
 	</head>
 	<body>
 		<table id="linkheadertable">
