add some space between orientation tags
using cellspacing and cellpadding to format orientation tags

--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+		<!--link to the css file-->
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 		<title>UC Mom</title>
 	</head>
 	<body>
-		<table id="linkheadertable">
-			<thead></thead>
+		<!--to make the tags have some space between them-->
+		<table id="linkheadertable" cellpadding="50",cellspacing="25%">
 			<tbody>
 			<tr>
 				<td><h3><span>Home</span></h3></td>
 				<td><h3>Map</h3></td>
 				<td><a href = "http://women.ucsd.edu/"><h3>Contact</h3></a></td>
 				<!-- contact links to women center-->
-				<td><h3>Login</h3></color></td>
+				<td><h3>Login</h3></td>
 			</tr>
 			</tbody>
 		</table>
 
 	<hr width="80%";size="3" />
 	<p align="center">UCMOM <span>San Diego</span></p>
+	
 	<!--create 11 blocks to put images in-->
 	<table id="geisel1">
 	<tr>
