add some space between orientation tags(looks the same as index.html)

--- a/login.html
+++ b/login.html
@@ -5,15 +5,14 @@
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 	</head>
 <body>
-	<table id="linkheadertable">
-		<thead></thead>
+	<table id="linkheadertable" cellpadding="50" cellspacing="25%">
 		<tbody>
 		<tr>
 			<td><h3>Home</h3></td>
 			<td><h3>Map</h3></td>
 			<td><a href = "http://women.ucsd.edu/"><h3>Contact</h3></a></td>
 			<!-- contact links to women center-->
-			<td><h3><span>Login</span></h3></color></td>
+			<td><h3><span>Login</span></h3></td>
 		</tr>
 		</tbody>
 	</table>
