Change to uppercase in navigation bar
Space the words using css instead of cellspacing&cellpadding

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<!--to make the tags have some space between them-->
-		<table id="linkheadertable" cellpadding="50",cellspacing="25%">
+		<table id="linkheadertable">
 			<tbody>
 			<tr>
-				<td><h3><span>Home</span></h3></td>
-				<td><h3>Map</h3></td>
-				<td><a href = "http://women.ucsd.edu/"><h3>Contact</h3></a></td>
+				<td><h3><span>HOME</span></h3></td>
+				<td><h3>MAP</h3></td>
+				<td><a href = "http://women.ucsd.edu/"><h3>CONTACT</h3></a></td>
 				<!-- contact links to women center-->
-				<td><h3>Login</h3></td>
+				<td><h3>LOGIN</h3></td>
 			</tr>
 			</tbody>
 		</table>
