change of title and navigation bar

--- a/login.html
+++ b/login.html
@@ -1,18 +1,18 @@
 <!-- the login page content -->
 <!doctype html>
 	<head>
-		<title>Lactation Room Reservation</title>
+		<title>UC Mom</title>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 	</head>
 <body>
-	<table id="linkheadertable" cellpadding="50" cellspacing="25%">
+	<table id="linkheadertable">
 		<tbody>
 		<tr>
-			<td><h3>Home</h3></td>
-			<td><h3>Map</h3></td>
-			<td><a href = "http://women.ucsd.edu/"><h3>Contact</h3></a></td>
+			<td><h3>HOME</h3></td>
+			<td><h3>MAP</h3></td>
+			<td><a href = "http://women.ucsd.edu/"><h3>CONTACT</h3></a></td>
 			<!-- contact links to women center-->
-			<td><h3><span>Login</span></h3></td>
+			<td><h3><span>LOGIN</span></h3></td>
 		</tr>
 		</tbody>
 	</table>
