Try modal window for price center room
Randomly choose one picture to see the result.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 		<!--link to the css file-->
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
-		<title>UC Mom</title>
+		<title>UC MOM</title>
 	</head>
 	<body>
 		<!--to make the tags have some space between them-->
@@ -26,7 +26,19 @@
 	<!--create 11 blocks to put images in-->
 	<table id="geisel1">
 	<tr>
-		<td><div class="picture"></div></td>
+		<td><div class="picture"><a href = "#openModal"><img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2MRJW6AlcVV6CzbR4cltIhqwwuluvvfm3s7U7_w4OTLDnG0yp"></a>
+			<div id = "openModal" class = "modalWindow">
+				<div>
+					<!--want to change the font of the h1 heading-->
+					<h1 id  = firstLine>Price Center Room</h1>
+					<h2>MAKE A RESERVATION</h2>
+					<h2>CANCEL A RESERVATION</h2>
+					<h2>VIEW ALL RESERVATIONS</h2>
+					
+					<a href = "#close" title= "Close" class = "close">X</a>
+				</div>
+			</div>
+		</td>
 		<td><div class="picture"></div></td>
 	</tr>
 	</table>
