--- a/index.html
+++ b/index.html
@@ -27,33 +27,31 @@
 	<table id="geisel1">
 	<tr>
 		<!-- try to make the picture to be clickable-->
-		<td><div class="picture"><a href = "#openModal1"><img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2MRJW6AlcVV6CzbR4cltIhqwwuluvvfm3s7U7_w4OTLDnG0yp"></a>
+		<td><a href = "#openModal1"><div class="picture"></div></a>
 				<div id = "openModal1" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
 						<h1 class  = firstLine>Price Center Room</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 		
 		<td>
-			<div class="picture"><a href = "#openModal2"><img src = "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSBVqD5JUIEcbAY_69IRj__rw7Lzl6Uh3cIOFBsLLuPrP6J-8RV"></a>
+			<a href = "#openModal2"><div class="picture"></div></a>
 				<div id = "openModal2" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
 						<h1 class  = firstLine>CSE Room</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 	</tr>
 	</table>
@@ -61,45 +59,42 @@
 	<table id="geisel2">
 	<tr>
 		<td>
-			<div class="picture"><a href = "#openModal3"><img src = ""></a>
+			<a href = "#openModal3"><div class="picture"></div></a>
 				<div id = "openModal3" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 3</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>	
-			</div>
 			</td>
 		
 		<td>
-			<div class="picture"><a href = "#openModal4"><img src = ""></a>
+			<a href = "#openModal4"><div class="picture"></div></a>
 				<div id = "openModal4" class= "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 4</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 		
 		<td>
-			<div class="picture"><a href = "#openModal5"><img src = ""></a>
+			<a href = "#openModal5"><div class="picture"></div></a>
 				<div id = "openModal5" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 5</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 	</tr>
 	</table>
@@ -107,59 +102,55 @@
 	<table id="geisel3">
 	<tr>
 		<td>
-			<div class = "picture"><a href = "#openModal6"><img src = ""></a>
+			<a href = "#openModal6"><div class="picture"></div></a>
 				<div id = "openModal6" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 6</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 		
 		<td>
-			<div class = "picture"><a href = "#openModal7"><img src = ""></a>
+			<a href = "#openModal7"><div class="picture"></div></a>
 				<div id = "openModal7" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 7</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 		
 		<td>
-			<div class = "picture"><a href = "#openModal8"><img src = ""></a>
+			<a href = "#openModal8"><div class="picture"></div></a>
 				<div id = "openModal8" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 8</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 		
 		<td>
-			<div class = "picture"><a href = "#openModal9"><img src = ""></a>
+			<a href = "#openModal9"><div class="picture"></div></a>
 				<div id = "openModal9" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 9</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>
 				</div>
-			</div>
 		</td>
 	</tr>
 	</table>
@@ -167,36 +158,32 @@
 	<table id="geisel4">
 	<tr>
 		<td>
-			<div class="picture"><a href = "#openModal10"><img src = ""></a>
+			<a href = "#openModal10"><div class="picture"></div></a>
 				<div id  = "openModal10" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 10</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>	
 				</div>
-			</div>
 		</td>
 		
 		<td>
-			<div class="picture"><a href = "#openModal11"><img src = ""></a>
+			<a href = "#openModal11"><div class="picture"></div></a>
 				<div id = "openModal11" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 11</h1>
-						<h2>MAKE A RESERVATION</h2>
-						<h2>CANCEL A RESERVATION</h2>
-						<h2>VIEW ALL RESERVATIONS</h2>
+						<h3 class="make_res">MAKE A RESERVATION</h3>
+						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
+						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
 						<a href = "#close" title= "Close" class = "close">X</a>
 					</div>	
 				</div>
-			</div>
 		</td>
 	</tr>
 	</table>
-
-
 
 	</body>
 </html>
