--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<table id="geisel1">
 	<tr>
 		<!-- try to make the picture to be clickable-->
-		<td><a href = "#openModal1"><div class="picture"></div></a>
+		<td><a href = "#openModal1"><div class="picture"><img src="./images/BSB_B241.JPG" /></div></a>
 				<div id = "openModal1" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
@@ -41,7 +41,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal2"><div class="picture"></div></a>
+			<a href = "#openModal2"><div class="picture"><img src="./images/EBU-3B_3113.JPG" /></div></a>
 				<div id = "openModal2" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
@@ -59,7 +59,7 @@
 	<table id="geisel2">
 	<tr>
 		<td>
-			<a href = "#openModal3"><div class="picture"></div></a>
+			<a href = "#openModal3"><div class="picture"><img src="./images/GalbraithHall_252.JPG" /></div></a>
 				<div id = "openModal3" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 3</h1>
@@ -72,7 +72,7 @@
 			</td>
 		
 		<td>
-			<a href = "#openModal4"><div class="picture"></div></a>
+			<a href = "#openModal4"><div class="picture"><img src="./images/Leichtag_2ndFloor.JPG" /></div></a>
 				<div id = "openModal4" class= "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 4</h1>
@@ -85,7 +85,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal5"><div class="picture"></div></a>
+			<a href = "#openModal5"><div class="picture"><img src="./images/Leichtag_3rdFloor.JPG" /></div></a>
 				<div id = "openModal5" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 5</h1>
