add other pictures to the boxes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<table id="geisel3">
 	<tr>
 		<td>
-			<a href = "#openModal6"><div class="picture"></div></a>
+			<a href = "#openModal6"><div class="picture"><img src = "./images/Nierenberg_416C.JPG"></div></a>
 				<div id = "openModal6" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 6</h1>
@@ -115,7 +115,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal7"><div class="picture"></div></a>
+			<a href = "#openModal7"><div class="picture"><img src = "./images/PriceCtrGreen_2.115.JPG"></div></a>
 				<div id = "openModal7" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 7</h1>
@@ -128,7 +128,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal8"><div class="picture"></div></a>
+			<a href = "#openModal8"><div class="picture"><img src = "./images/SME_4thFloor.JPG"></div></a>
 				<div id = "openModal8" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 8</h1>
@@ -141,7 +141,7 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal9"><div class="picture"></div></a>
+			<a href = "#openModal9"><div class="picture"><img src = "./images/TorreyPInesNorth_130.JPG"></div></a>
 				<div id = "openModal9" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 9</h1>
@@ -158,7 +158,7 @@
 	<table id="geisel4">
 	<tr>
 		<td>
-			<a href = "#openModal10"><div class="picture"></div></a>
+			<a href = "#openModal10"><div class="picture"><img src = "./images/WomensCtr.JPG"></div></a>
 				<div id  = "openModal10" class = "modalWindow">
 					<div>
 						<h1 class  = firstLine>Lactation Room 10</h1>
