--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<table id="geisel1">
 	<tr>
 		<!-- try to make the picture to be clickable-->
-		<td><a href = "#openModal1"><div class="picture"><img src="./images/BSB_B241.JPG" /></div></a>
+		<td><a href = "#openModal1"><div class="picture"><img src="./images/BSB_B241.jpg" /></div></a>
 				<div id = "openModal1" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
@@ -41,11 +41,11 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal2"><div class="picture"><img src="./images/EBU-3B_3113.JPG" /></div></a>
+			<a href = "#openModal2"><div class="picture"><img src="./images/EBU-3B_3113.jpg" /></div></a>
 				<div id = "openModal2" class = "modalWindow">
 					<div>
 						<!--want to change the font of the h1 heading-->
-						<h1 class  = firstLine>CSE Room</h1>
+						<h1 class  = firstLine>Computer Science and Engineering Building</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -59,10 +59,10 @@
 	<table id="geisel2">
 	<tr>
 		<td>
-			<a href = "#openModal3"><div class="picture"><img src="./images/GalbraithHall_252.JPG" /></div></a>
+			<a href = "#openModal3"><div class="picture"><img src="./images/GalbraithHall_252.jpg" /></div></a>
 				<div id = "openModal3" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 3</h1>
+						<h1 class  = firstLine>Galbraith Hall</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -71,11 +71,11 @@
 				</div>	
 			</td>
 		
-		<td>
-			<a href = "#openModal4"><div class="picture"><img src="./images/Leichtag_2ndFloor.JPG" /></div></a>
+	<td>
+			<a href = "#openModal4"><div class="picture"><img src="./images/Leichtag_2ndFloor.jpg" /></div></a>
 				<div id = "openModal4" class= "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 4</h1>
+						<h1 class  = firstLine>Leichtag 2nd Floor</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -84,11 +84,11 @@
 				</div>
 		</td>
 		
-		<td>
-			<a href = "#openModal5"><div class="picture"><img src="./images/Leichtag_3rdFloor.JPG" /></div></a>
+	        <td>
+			<a href = "#openModal5"><div class="picture"><img src="./images/Leichtag_3rdFloor.jpg" /></div></a>
 				<div id = "openModal5" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 5</h1>
+						<h1 class  = firstLine>Leichtag 3rd Floor</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -102,10 +102,10 @@
 	<table id="geisel3">
 	<tr>
 		<td>
-			<a href = "#openModal6"><div class="picture"><img src = "./images/Nierenberg_416C.JPG"></div></a>
+			<a href = "#openModal6"><div class="picture"><img src = "./images/Nierenberg_416C.jpg"></div></a>
 				<div id = "openModal6" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 6</h1>
+						<h1 class  = firstLine>Nierenberg</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -115,10 +115,10 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal7"><div class="picture"><img src = "./images/PriceCtrGreen_2.115.JPG"></div></a>
+			<a href = "#openModal7"><div class="picture"><img src = "./images/PriceCtrGreen_2.115.jpg"></div></a>
 				<div id = "openModal7" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 7</h1>
+						<h1 class  = firstLine>Price Center</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -128,10 +128,10 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal8"><div class="picture"><img src = "./images/SME_4thFloor.JPG"></div></a>
+			<a href = "#openModal8"><div class="picture"><img src = "./images/SME_4thFloor.jpg"></div></a>
 				<div id = "openModal8" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 8</h1>
+						<h1 class  = firstLine>Structural and Materials Engineering 4th Floor</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -141,10 +141,10 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal9"><div class="picture"><img src = "./images/TorreyPInesNorth_130.JPG"></div></a>
+			<a href = "#openModal9"><div class="picture"><img src = "./images/TorreyPinesNorth_130.jpg"></div></a>
 				<div id = "openModal9" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 9</h1>
+						<h1 class  = firstLine>Torrey Pines North</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -158,10 +158,10 @@
 	<table id="geisel4">
 	<tr>
 		<td>
-			<a href = "#openModal10"><div class="picture"><img src = "./images/WomensCtr.JPG"></div></a>
+			<a href = "#openModal10"><div class="picture"><img src = "./images/WomensCtr.jpg"></div></a>
 				<div id  = "openModal10" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 10</h1>
+						<h1 class  = firstLine>Women's Center</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
@@ -171,10 +171,10 @@
 		</td>
 		
 		<td>
-			<a href = "#openModal11"><div class="picture"></div></a>
+			<a href = "#openModal11"><div class="picture"><img src = "./images/ThorntonHospital.jpg"></div></a>
 				<div id = "openModal11" class = "modalWindow">
 					<div>
-						<h1 class  = firstLine>Lactation Room 11</h1>
+						<h1 class  = firstLine>Thornton Hospital</h1>
 						<h3 class="make_res">MAKE A RESERVATION</h3>
 						<h3 class="cancel_res">CANCEL A RESERVATION</h3>
 						<h3 class="view_res">VIEW ALL RESERVATIONS</h3>
