Link the map to the index page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<tbody>
 			<tr>
 				<td><h3><span>HOME</span></h3></td>
-				<td><h3>MAP</h3></td>
+				<td><a href = "./ucsdmap.html"><h3>MAP</h3></a></td>
 				<td><a href = "http://women.ucsd.edu/"><h3>CONTACT</h3></a></td>
 				<!-- contact links to women center-->
 				<td><h3>LOGIN</h3></td>
