--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 		<title>UC MOM Login</title>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css">
 	</head>
-<body>
+<body id="loginbg">
 <!-- table to hold all the links in the header -->
 	<table id="linkheadertable">
 		<tbody>
