--- a/login.html
+++ b/login.html
@@ -37,10 +37,11 @@
 			<div class="inputbox">
 				<!--empty block to enter user email-->
 				<h4 class="white">EMAIL</h3>
-				<input id="usernameInput" type="username" size="50" name="emaillogin"></td>
+				<input id="usernameInput" type="username" size="50" name="emaillogin" /></td>
 				<!--empty block to enter password-->
 				<h4 class="white">5 DIGIT CODE</h3>
-				<input id="pwdInput" type="password" size="50" name="digitcode">
+				<input id="pwdInput" type="password" autocomplete="off" size="50" name="digitcode" />
+				
 			</div>	
 		</div>
 
